--- a/src/ejs-template/index.ejs
+++ b/src/ejs-template/index.ejs
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title><%= htmlWebpackPlugin.options.title %></title>
 
-  <!-- preload doesn't work in firefox but speeds up loading in chrome -->
+  <!-- TODO: Update requires with new file locations -->
   <link rel="preload" 
     href="<%= require('./images/heavy-breathing-cat.jpg') %>"
     as="image" type="image/jpeg">
