--- a/src/scss-global/_reset.scss
+++ b/src/scss-global/_reset.scss
@@ -1,3 +1,6 @@
+// bring in partials
+@use '../scss-partial/index.scss' as *;
+
 /*********************************************\ 
   reset 
 \*********************************************/
