--- a/src/scss-partial/_mixins.scss
+++ b/src/scss-partial/_mixins.scss
@@ -1,3 +1,6 @@
+// bring in variables
+@use './variables.scss' as *;
+
 /*********************************************\ 
   mixins
 \*********************************************/
