--- a/src/ejs-template/index.ejs
+++ b/src/ejs-template/index.ejs
@@ -28,19 +28,7 @@
   <%= htmlWebpackPlugin.tags.headTags %>
 </head>
 <body>
-  <header>
-    <h1></h1>
-    <p>good memes rayt here</p>
-    <img src="<%= require('../component-landing/images/heavy-breathing-cat.jpg') %>">
-    <button>dank memes hur</button>
-  </header>
-
-  <main>
-    <!-- span style is quick fix for chrome -->
-    <button><span style="writing-mode: vertical-lr;">staph</span></button>
-    <div id="memes"></div>
-    <button><span style="writing-mode: vertical-lr;">moar</span></button>
-  </main>
+  <div id="root"></div>
 
   <noscript>
     <p>This web app doesn't work without JavaScript.</p>
