--- a/src/component-meme/main.scss
+++ b/src/component-meme/main.scss
@@ -1,3 +1,5 @@
+@use '../scss-partial/index.scss' as *;
+
 /*********************************************\ 
   classes
 \*********************************************/
