--- a/src/component-meme/main.scss
+++ b/src/component-meme/main.scss
@@ -1,5 +1,9 @@
 @use '../scss-partial/index.scss' as *;
 
+/**
+ * component-meme styles
+*/
+
 @keyframes slideXAnimation {   
   0% { transform: scaleX(0); }
   100% { transform: scaleX(1); }
@@ -11,10 +15,6 @@
 @keyframes backAndForthAnimation {
   0% { transform: translateX(-20vw); }
   100% { transform: translateX(20vw); }
-}
-@keyframes rippleAnimation {
-  0% { box-shadow: 0 0 0 0 $dark-contrast; }
-  100% { box-shadow: 0 0 0 2rem lighten($color: $dark-contrast, $amount: 90%); }
 }
 
 /*********************************************\ 
