--- a/src/component-main/main.scss
+++ b/src/component-main/main.scss
@@ -1,5 +1,5 @@
 /**************************************************\
-  component-meme main.scss
+  component-main main.scss
 \**************************************************/
 
 /* Imports */
@@ -88,6 +88,27 @@
   margin: 3rem auto;
 
   @include width900 { width: 70%; }
+
+  p :local {
+    transform-origin: top;
+    animation: slideYAnimation 500ms ease-in-out 0ms 1 normal forwards running;
+  }
+  
+  a { margin: 10vh 0; }
+  
+  img :local {
+    max-width: 100%;
+    transform-origin: right;
+    animation: slideXAnimation 500ms ease-in-out 0ms 1 normal forwards running;    
+  }
+  
+  hr :local {
+    width: 100%;
+    height: 1vh;
+    background-color: $light-contrast;
+    transform-origin: left;
+    animation: slideXAnimation 500ms ease-in-out 0ms 1 normal forwards running;        
+  }
 }
 
 /* 
@@ -159,6 +180,7 @@ main -> .container {
     @include width900 { width: 70%; }
   }
 
+  // p, a, img, hr put inside .memesContainer
   p {
     transform-origin: top;
     
