--- a/src/component-main/main.scss
+++ b/src/component-main/main.scss
@@ -107,6 +107,15 @@
   }
 }
 
+/* Main added styles */
+.hideButtonOnScroll {
+  transform: scale(0.5) translate(-20vw, -10vh);
+
+  @include landscape {
+    transform: scale(0.5) translate(-10vw, -10vh);
+  }
+}
+
 /* Loader base style classes */
 .loaderMessage {
   max-width: 25rem;
@@ -137,23 +146,14 @@
   margin: 5vh 0 10vh;
 }
 
-/*
-.staph-onscroll {
-  transform: scale(0.5) translate(-20vw, -10vh);
-
-  @include landscape {
-    transform: scale(0.5) translate(-10vw, -10vh);
-  }
-}
-.p-fetcherror {
+/* Meme base style classes */
+.memeFetchError {
   max-width: 25rem;
   margin: 10vh 0 0;
   line-height: 1.5;
   
   @include errorParagraph(1.2rem, 1.4rem, 1.6rem);
 }
-
-*/
 
 /* @media prefers-reduced-motion */
 @media (prefers-reduced-motion: reduce) {
