--- a/src/component-main/main.scss
+++ b/src/component-main/main.scss
@@ -147,12 +147,15 @@
 }
 
 /* Meme base style classes */
-.memeFetchError {
+.memeErrorMessage {
   max-width: 25rem;
-  margin: 10vh 0 0;
+  margin: 10vh 0;
   line-height: 1.5;
   
   @include errorParagraph(1.2rem, 1.4rem, 1.6rem);
+}
+.memeErrorImage {
+  margin-bottom: 10vh;
 }
 
 /* @media prefers-reduced-motion */
