--- a/src/component-landing/main.scss
+++ b/src/component-landing/main.scss
@@ -2,7 +2,7 @@
   component-landing main.scss
 \**************************************************/
 
-/* Imports */
+/// Imports
 @use '../scss-partial/index.scss' as *;
 
 /* Base style classes */
