--- a/src/component-main/main.scss
+++ b/src/component-main/main.scss
@@ -2,7 +2,7 @@
   component-main main.scss
 \**************************************************/
 
-/* Imports */
+/// Imports
 @use '../scss-partial/index.scss' as *;
 
 /* Animation keyframes */
